test/sema/struct_instantiation_invalid_initializer_expression.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
struct S {
    x: i32,
}

struct S2 {
}

fn main() -> void {
    S{x: S2{}};
    // CHECK: [[# @LINE - 1 ]]:10: error: 'S2{}' cannot be used to initialize a field of type 'i32'
}